Modified render yaml file

--- a/render.yaml
+++ b/render.yaml
@@ -1,3 +1,9 @@
+databases:
+  - name: test_app
+    databaseName: test_app
+    user: test_app
+    plan: free
+
 services:
   - type: web
     name: my_app
